# mashgraph

./: Makefile  README.md  run_align.py
include/: align.h  align_help.h  filters.h  matrix.hpp  plugin_manager.h  plugin_utils.h
include/mvc/: console_controller.h  console_views.h  model.h  mvc_base.h  observer.h
plugins_src/: median.cpp  unsharp.cpp
src/: .align.cpp.swp  align.cpp  align_help.cpp  main.cpp  plugin_utils.cpp
src/mvc/: console_controller.cpp  console_views.cpp  model.cpp  mvc_base.cpp
tests/: CMakeLists.txt  main.cpp
